--- a/taiwanpetadoptionApp/src/main/res/layout/activity_two_2.xml
+++ b/taiwanpetadoptionApp/src/main/res/layout/activity_two_2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.jackpan.taiwamrain.MainActivity" >
+     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -329,12 +329,16 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        ads:adSize="SMART_BANNER"
-        ads:adUnitId="@string/banner_ad_unit_id" >
-    </com.google.android.gms.ads.AdView>
-
+    <!--<com.google.android.gms.ads.AdView-->
+        <!--android:id="@+id/adView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--ads:adSize="SMART_BANNER"-->
+        <!--ads:adUnitId="@string/banner_ad_unit_id" >-->
+    <!--</com.google.android.gms.ads.AdView>-->
+    <com.adbert.AdbertLoopADView
+        android:id="@+id/adbertADView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </com.adbert.AdbertLoopADView>
 </LinearLayout>
